# META

./: .dockerignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  requirements.txt  script.py
app/: __init__.py  env.py  environment.py  graders.py  models.py  server.py  sqlaudit_ui.html  tasks.py
scripts/: verify_hackathon_endpoints.py
sqla-env/: Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
sqla-env/app/: env.py  environment.py  models.py  server.py  sqlaudit_ui.html
sqla-env/server/: __init__.py  app.py
sqla-env/tests/: test_env.py
